--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
+  "homepage": "http://alexeykalitin.github.io/front-end-layout",
   "name": "my-app",
   "version": "0.1.0",
-  "private": true,
+  "private": false,
   "dependencies": {
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
@@ -12,9 +13,12 @@
     "react-js-pagination": "^3.0.3",
     "react-paginate": "^7.1.3",
     "react-scripts": "4.0.3",
+    "save-dev": "0.0.1-security",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -37,5 +41,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^3.2.3"
   }
 }
