--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-js-pagination": "^3.0.3",
     "react-paginate": "^7.1.3",
     "react-scripts": "4.0.3",
+    "react-transition-group": "^4.4.2",
     "save-dev": "0.0.1-security",
     "web-vitals": "^1.1.2"
   },
