--- a/package.json
+++ b/package.json
@@ -8,11 +8,13 @@
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.23.0",
+    "dotenv": "^10.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-js-pagination": "^3.0.3",
     "react-paginate": "^7.1.3",
     "react-scripts": "4.0.3",
+    "react-tooltip": "^4.2.21",
     "react-transition-group": "^4.4.2",
     "save-dev": "0.0.1-security",
     "web-vitals": "^1.1.2"
