--- a/package.json
+++ b/package.json
@@ -1,22 +1,53 @@
 {
-  "name": "express-task",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "start": "node app.js"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
+  "homepage": "http://alexeykalitin.github.io/front-end-layout",
+  "name": "my-app",
+  "version": "0.1.0",
+  "private": false,
   "dependencies": {
-    "bluebird": "^3.7.2",
-    "body-parser": "^1.19.0",
-    "cors": "^2.8.5",
+    "@ant-design/icons": "^4.7.0",
+    "@testing-library/jest-dom": "^5.14.1",
+    "@testing-library/react": "^11.2.7",
+    "@testing-library/user-event": "^12.8.3",
+    "antd": "^4.16.13",
+    "axios": "^0.23.0",
     "dotenv": "^10.0.0",
-    "express": "^4.17.1",
-    "mongoose": "^6.0.12",
-    "nodemon": "^2.0.14",
-    "uuid": "^8.3.2"
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "react-js-pagination": "^3.0.3",
+    "react-paginate": "^7.1.3",
+    "react-scripts": "4.0.3",
+    "react-tooltip": "^4.2.21",
+    "react-transition-group": "^4.4.2",
+    "save-dev": "0.0.1-security",
+    "web-vitals": "^1.1.2"
+  },
+  "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
+  },
+  "eslintConfig": {
+    "extends": [
+      "react-app",
+      "react-app/jest"
+    ]
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
+  },
+  "devDependencies": {
+    "gh-pages": "^3.2.3"
   }
 }
