--- a/package.json
+++ b/package.json
@@ -1,8 +1,7 @@
 {
-  "homepage": "http://alexeykalitin.github.io/front-end-layout",
-  "name": "my-app",
+  "name": "react-hooks-firebase",
   "version": "0.1.0",
-  "private": false,
+  "private": true,
   "dependencies": {
     "@ant-design/icons": "^4.7.0",
     "@testing-library/jest-dom": "^5.14.1",
@@ -15,39 +14,30 @@
     "react-dom": "^17.0.2",
     "react-js-pagination": "^3.0.3",
     "react-paginate": "^7.1.3",
-    "react-scripts": "4.0.3",
+    "react-router": "^5.2.0",
+    "react-router-dom": "^5.2.0",
+    "react-scripts": "^4.0.3",
     "react-tooltip": "^4.2.21",
     "react-transition-group": "^4.4.2",
     "save-dev": "0.0.1-security",
-    "web-vitals": "^1.1.2"
+    "validator": "^13.7.0",
+    "web-vitals": "^1.1.2",
+    "@material-ui/core": "^3.9.2",
+    "@material-ui/icons": "^3.0.2"
   },
   "scripts": {
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
+    "extends": "react-app"
   },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  },
-  "devDependencies": {
-    "gh-pages": "^3.2.3"
-  }
+  "browserslist": [
+    ">0.2%",
+    "not dead",
+    "not ie <= 11",
+    "not op_mini all"
+  ]
 }
