--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
-  "name": "todo-app",
+  "name": "react-hooks-firebase",
   "version": "0.1.0",
-  "private": false,
+  "private": true,
   "dependencies": {
     "@ant-design/icons": "^4.7.0",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
-    "antd": "^4.16.13A",
+    "antd": "^4.16.13",
     "axios": "^0.23.0",
     "dotenv": "^10.0.0",
     "react": "^17.0.2",
@@ -26,7 +26,10 @@
     "@material-ui/icons": "^3.0.2"
   },
   "scripts": {
-    "start": "react-scripts start"
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": "react-app"
