--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "start": "concurrently \"cd src && nodemon index.js \" \"react-scripts start\" ",
+    "start": "serve -s build",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
@@ -32,6 +32,7 @@
     "react-dom": "^17.0.1",
     "react-router-dom": "^5.1.2",
     "react-scripts": "4.0.1",
+    "serve": "^13.0.2",
     "styled-components": "^5.0.1"
   },
   "eslintConfig": {
